--- a/index.html
+++ b/index.html
@@ -15,15 +15,32 @@
 </head>
 
 <body>
-  <div class="container-fluid">
+  <div class="container">
     <div class="row">
-      <div class="col-md-2 col-md-offset-5 height-center box">
-        <h3 class="text-center">Login</h3>
+      <div class="col-md-4 col-md-offset-4 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1 height-center box">
+        <h3 class="custom-header text-center">Login</h3>
         <hr class="light">
-        <P> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis id non quidem voluptas nisi molestiae et facere
-          ut voluptatum impedit architecto maiores eius ipsum, eum in, at adipisci inventore vel.
-        </P>
-        <button class="btn btn-login btn-block">Entrar</button>
+        <form class="form">
+          <div class="form-group">
+            <label for="inputEmail3" class="control-label">Usuário</label>
+            <div>
+              <input type="text" class="form-control input-custom" id="inputEmail3">
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="inputPassword3" class="control-label">Senha</label>
+            <div>
+              <input type="password" class="form-control input-custom" id="inputPassword3">
+            </div>
+          </div>
+          <p class="text-center"><a href="#" class="link">Esqueci minha senha</a></p>
+          <div class="form-group">
+            <div>
+              <button type="submit" class="btn btn-login btn-block btn-custom">Cadastre-se</button>
+              <button type="submit" class="btn btn-login btn-block btn-custom">Entrar</button>
+            </div>
+          </div>
+        </form>
 
       </div>
       <!-- <button class="btn btn-login">dong</button> -->
