add login, add main

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container login-box">
     <div class="row">
-      <div class="col-md-4 col-md-offset-4 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1 height-center box">
+      <div class="login-box-body">
         <h3 class="custom-header text-center">Login</h3>
         <hr class="light">
         <form class="form">
