--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="login">
 
 <head>
   <meta charset="UTF-8">
@@ -14,7 +14,7 @@
   <title>Sushifinder</title>
 </head>
 
-<body>
+<body class="login">
   <div class="container login-box">
     <div class="row">
       <div class="login-box-body">
