--- a/register.html
+++ b/register.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-default navbar-fixed-top">
+  <nav class="navbar navbar-default">
     <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -41,7 +41,7 @@
     </div>
     <!-- /.container-fluid -->
   </nav>
-  <main class="container" style="margin-top: 100px;">
+  <main class="container">
     <form>
       <div class="row">
         <div class="form-group col-md-6 col-xs-12 col-sm-12 ">
@@ -77,7 +77,7 @@
           <input type="email" class="form-control input-custom" id="inputAddressNumberComplement" placeholder="Bloco A - apt. 55A">
         </div>
       </div>
-      <button type="submit" class="btn btn-default">Submit</button>
+      <button type="submit" class="btn btn-login btn-custom col-md-2 col-md-offset-10 col-sm-12 col-xs-12">Cadastrar</button>
     </form>
   </main>
 </body>
