--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
   <div class="container login-box">
     <div class="row">
       <div class="login-box-body">
-        <h3 class="custom-header text-center">Login</h3>
+        <img src="img/logo-small-no-bg.png" class="img-responsive center-block" alt="Responsive image">
         <hr class="light">
         <form class="form">
           <div class="form-group">
@@ -33,17 +33,19 @@
               <input type="password" class="form-control input-custom" id="inputPassword3">
             </div>
           </div>
-          <p class="text-center"><a href="#" class="link">Esqueci minha senha</a></p>
+          <p class="text-center">
+            <a href="#" class="link">Esqueci minha senha</a>
+          </p>
           <div class="form-group">
             <div>
-              <button type="submit" class="btn btn-login btn-block btn-custom">Cadastre-se</button>
+              <button type="submit" ><a ></a></button>
+              <a class="btn btn-login btn-block btn-custom" href="register.html">Cadastre-se</a>
               <button type="submit" class="btn btn-login btn-block btn-custom">Entrar</button>
             </div>
           </div>
         </form>
 
       </div>
-      <!-- <button class="btn btn-login">dong</button> -->
     </div>
   </div>
 </body>
