--- a/register.html
+++ b/register.html
@@ -26,14 +26,17 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">LOGO</a>
+        <!-- <img src="img/logo-small-no-bg.png" class="img-responsive center-block" alt="Responsive image"> -->
+        <a class="navbar-brand img-responsive center-block" href="#">
+          <img alt="Brand" src="img/logo-small-no-bg.png">
+        </a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
           <li>
-            <a href="#">login</a>
+            <a href="login.html">LOGIN</a>
           </li>
         </ul>
       </div>
