--- a/main.html
+++ b/main.html
@@ -51,7 +51,32 @@
     <!-- /.container-fluid -->
   </nav>
   <main class="container">
-
+    <div class="row">
+      <ul class="nav nav-tabs nav-justified text-center">
+        <li class="active">
+          <a href="login.html">CARDÁPIO</a>
+        </li>
+        <li>
+          <a href="login.html">ME SURPREENDA</a>
+        </li>
+      </ul>
+    </div>
+    <div class="row">
+      <div class="box-wrapper">
+        <div class="box-content col-md-2 col-sm-4">
+          <img src="img/temak-sushi-140x140.jpg" alt="temaki-sushi">
+        </div>
+        <div class="box-content col-md-6 col-sm-5">
+          <h3>Descrição: </h3>
+          <p>TEMAKI SUSHI</p>
+          <h3>Ingredientes: </h3>
+          <p>Arroz, peixe, vai se fudê, porra, de, comida japonesa, sou mais, umas batata, loca</p>
+        </div>
+        <div class="box-content col-md-4 col-sm-3">
+          R$ 9999,95
+        </div>
+      </div>
+    </div>
   </main>
 </body>
 
