--- a/main.html
+++ b/main.html
@@ -73,11 +73,26 @@
           <p>Arroz, peixe, vai se fudê, porra, de, comida japonesa, sou mais, umas batata, loca</p>
         </div>
         <div class="box-content col-md-4 col-sm-3">
-          R$ 9999,95
+          <p class="price">R$ 26,99</p>
+          <div class="input-group padding-default">
+            <span class="input-group-btn">
+              <button type="button" class="btn btn-danger btn-number" data-type="minus" data-field="quant[2]">
+                <span class="glyphicon glyphicon-minus"></span>
+              </button>
+            </span>
+            <input type="text" name="quant[2]" class="form-control input-number" value="1" min="1" max="50">
+            <span class="input-group-btn">
+              <button type="button" class="btn btn-success btn-number" data-type="plus" data-field="quant[2]">
+                <span class="glyphicon glyphicon-plus"></span>
+              </button>
+            </span>
+          </div>
+          <button class="btn btn-login btn-block btn-custom">Adicionar item</button>
         </div>
       </div>
     </div>
   </main>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
