--- a/main-comida.html
+++ b/main-comida.html
@@ -36,10 +36,10 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
           <li>
-            <a href="login.html">CARDÁPIO</a>
+            <a href="login.html">PEDIDOS</a>
           </li>
           <li>
-            <a href="login.html">ME SURPREENDA</a>
+            <a href="login.html">ME SUPREENDA</a>
           </li>
           <li>
             <a href="login.html">SAIR</a>
@@ -54,10 +54,10 @@
     <div class="row">
       <ul class="nav nav-tabs nav-justified text-center">
         <li class="active">
-          <a href="login.html">CARDÁPIO</a>
+          <a href="main-comida.html">COMIDAS</a>
         </li>
         <li>
-          <a href="login.html">ME SURPREENDA</a>
+          <a href="main-refri.html">BEBIDAS</a>
         </li>
       </ul>
     </div>
@@ -74,7 +74,7 @@
         </div>
         <div class="box-content col-md-4 col-sm-3">
           <p class="price">R$ 26,99</p>
-          <div class="input-group padding-default">
+          <div class="input-group margin-default">
             <span class="input-group-btn">
               <button type="button" class="btn btn-danger btn-number" data-type="minus" data-field="quant[2]">
                 <span class="glyphicon glyphicon-minus"></span>
@@ -87,7 +87,67 @@
               </button>
             </span>
           </div>
-          <button class="btn btn-login btn-block btn-custom">Adicionar item</button>
+          <button class="btn btn-login btn-block btn-custom">Adicionar item ao pedido</button>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="box-wrapper">
+        <div class="box-content col-md-2 col-sm-4">
+          <img src="img/temak-sushi-140x140.jpg" alt="temaki-sushi">
+        </div>
+        <div class="box-content col-md-6 col-sm-5">
+          <h3>Descrição: </h3>
+          <p>TEMAKI SUSHI</p>
+          <h3>Ingredientes: </h3>
+          <p>Arroz, peixe, vai se fudê, porra, de, comida japonesa, sou mais, umas batata, loca</p>
+        </div>
+        <div class="box-content col-md-4 col-sm-3">
+          <p class="price">R$ 26,99</p>
+          <div class="input-group margin-default">
+            <span class="input-group-btn">
+              <button type="button" class="btn btn-danger btn-number" data-type="minus" data-field="quant[2]">
+                <span class="glyphicon glyphicon-minus"></span>
+              </button>
+            </span>
+            <input type="text" name="quant[2]" class="form-control input-number" value="1" min="1" max="50">
+            <span class="input-group-btn">
+              <button type="button" class="btn btn-success btn-number" data-type="plus" data-field="quant[2]">
+                <span class="glyphicon glyphicon-plus"></span>
+              </button>
+            </span>
+          </div>
+          <button class="btn btn-login btn-block btn-custom">Adicionar item ao pedido</button>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="box-wrapper">
+        <div class="box-content col-md-2 col-sm-4">
+          <img src="img/temak-sushi-140x140.jpg" alt="temaki-sushi">
+        </div>
+        <div class="box-content col-md-6 col-sm-5">
+          <h3>Descrição: </h3>
+          <p>TEMAKI SUSHI</p>
+          <h3>Ingredientes: </h3>
+          <p>Arroz, peixe, vai se fudê, porra, de, comida japonesa, sou mais, umas batata, loca</p>
+        </div>
+        <div class="box-content col-md-4 col-sm-3">
+          <p class="price">R$ 26,99</p>
+          <div class="input-group margin-default">
+            <span class="input-group-btn">
+              <button type="button" class="btn btn-danger btn-number" data-type="minus" data-field="quant[2]">
+                <span class="glyphicon glyphicon-minus"></span>
+              </button>
+            </span>
+            <input type="text" name="quant[2]" class="form-control input-number" value="1" min="1" max="50">
+            <span class="input-group-btn">
+              <button type="button" class="btn btn-success btn-number" data-type="plus" data-field="quant[2]">
+                <span class="glyphicon glyphicon-plus"></span>
+              </button>
+            </span>
+          </div>
+          <button class="btn btn-login btn-block btn-custom">Adicionar item ao pedido</button>
         </div>
       </div>
     </div>
