--- a/menu-beverages.html
+++ b/menu-beverages.html
@@ -54,10 +54,10 @@
     <div class="row">
       <ul class="nav nav-tabs nav-justified text-center">
         <li class="active">
-          <a href="main-comida.html">COMIDAS</a>
+          <a href="menu-foods.html">COMIDAS</a>
         </li>
         <li>
-          <a href="main-refri.html">BEBIDAS</a>
+          <a href="menu-beverages.html">BEBIDAS</a>
         </li>
       </ul>
     </div>
