--- a/menu-foods.html
+++ b/menu-foods.html
@@ -36,7 +36,7 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
           <li>
-            <a href="login.html">PEDIDOS</a>
+            <a href="orders.html">PEDIDOS</a>
           </li>
           <li>
             <a href="login.html">ME SUPREENDA</a>
@@ -54,10 +54,10 @@
     <div class="row">
       <ul class="nav nav-tabs nav-justified text-center">
         <li class="active">
-          <a href="main-comida.html">COMIDAS</a>
+          <a href="menu-foods.html">COMIDAS</a>
         </li>
         <li>
-          <a href="main-refri.html">BEBIDAS</a>
+          <a href="menu-beverages.html">BEBIDAS</a>
         </li>
       </ul>
     </div>
